--- a/Site/web/css/main.css
+++ b/Site/web/css/main.css
@@ -1,216 +1,148 @@
-/*! HTML5 Boilerplate v4.3.0 | MIT License | http://h5bp.com/ */
-* {
-    margin: 0;
-    padding: 0;
-}
-html,
-button,
-input,
-select,
-textarea {
-    color: #222;
-}
-
-html {
-    font-size: 1em;
-    line-height: 1.4;
-}
 
 
-
-::-moz-selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-::selection {
-    background: #b3d4fc;
-    text-shadow: none;
-}
-
-audio,
-canvas,
-img,
-video {
-    vertical-align: middle;
-}
-
-fieldset {
-    border: 0;
-    margin: 0;
-    padding: 0;
-}
-
-textarea {
-    resize: vertical;
-}
-
-.browsehappy {
-    margin: 0.2em 0;
-    background: #ccc;
-    color: #000;
-    padding: 0.2em 0;
-}
-
-label {
-    font-size: 0.7em;
-}
-
-
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
-
-body{
-    background-color: #000000;
-}
-.container_12{
-    background-color: #FFF;
-}
-
-hr.espaco {
-    display: block;
-    float: left;
-    color: solid #FFF;
-    border: 0;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    height: 10px;
+body {
+	background: #ccc;
 }
 
 #topo {
-    padding: 0px;
-    margin: 0px;
-}
-#player{
-    -webkit-border-radius: 10px;
+	margin: 0px;
+	margin-top: 5px;
+	margin-bottom: 1px;
+	width: 960px;
+	height: 200px;
+	background: #858585;
+	
 }
 
+#login {
+	margin: 0px;
+	width: 960px;
+	height: 30px;
+	background: #858585;
+	margin-bottom: 10px;
+	text-align: right;
+}
 
+#login form {
+	margin-right: 10px;
+	margin-top: 5px;
+	font-size: 12px;
+}
+
+#login form input[type="text"]{
+	width: 100px;
+	height: 10px;
+	font-size: 11px;
+}
+
+#login form input[type="submit"]:hover ,form input[type="button"]:hover{
+	background: #ccc;
+}
+
+#login span {
+    float: left;
+    padding: 5px;
+    color: #ff0000;
+}
+
+#menu {
+	padding: 0;
+	margin: 0;
+	margin-bottom: 10px; 
+	width: 960px;
+	height: 50px;
+	background: #3f4c6b;
+}
+
+#menu nav{
+	margin: 0px;
+	width: 960px;
+	height: 50px;
+}
+
+#menu nav ul{
+	margin: 0;
+	padding: 0;
+	list-style-type: none;
+	margin: 10px;
+	padding-top: 1px;
+	padding-left: 30px;
+}
+
+#menu nav ul li{
+	display: inline;
+	padding: 10px;
+	font-size: 25px;
+	text-align: center;
+	text-transform: uppercase; 
+}
+
+#menu nav ul li:hover {
+	background: #99A2C9;
+}
+
+#menu a {
+	text-decoration: none;
+	color: #FFF;
+}
+
+#menu a:hover {
+	color: #000;
+}
 #main {
 }
-
-#evento_anterior {
-    -webkit-border-radius: 10px;
-}
-
-#proximo_evento {
-}
-
-#anuncio {
-    -webkit-border-radius: 10px;
-}
-
-#agenda {
-    margin-top: 10px;
+#main_centro {
+	margin: 0px;
+	margin-right: 10px;
+	margin-left: 10px;
+        width: 640px;
+	height:auto !important;
+        min-height:500px;
+	background: #858585;
+	border-radius: 20px;
 
 }
 
-#rodape {
-    
-}
-
-.rodape {
-    -webkit-border-radius: 10px;
-}
-
-#formLogin{
-    margin-top: 5px;
-    background-color: #838383;
-    -webkit-border-radius: 5px;
-}
-
-#formLogin table {
-    float: right;
-}
-
-#formLogado{
-    margin-top: 5px;
-    background-color: #838383;
-    -webkit-border-radius: 5px;
-}
-
-#formLogado table {
-    float: right;
-}
-
-input.botao {
-    font-size: 0.7em;
-    width: 60px;
-    height: 18px;
-    margin-top: 0px;
-    margin-right: 2px;
-}
-
-input.txtboxUser {
-    font-size: 0.7em;
-    width: 80px;
-    height: 10px;
-    margin-bottom: 5px;
-}
-input.txtboxPass {
-    font-size: 0.7em;
-    width: 60px;
-    height: 10px;
-}
-#menu{
-    float: left;  
-
-}
-div#menu a{
-    text-decoration: none;
-    color: #FFFFFF;
-}
-div#menu ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    margin-top: 10px;
-}
-
-div#menu ul li{
-    float: left;
-    padding: 10px 20px;
-    margin-left: 5px;
-    background-color: #4d4d4d;
-    border-right: 1px solid #FFFFFF;    
-    border-top: 1px solid #FFFFFF;
-    border-bottom: 1px solic #FFFFFF;
+#txt_centro {
+    margin: 20px;
     position: relative;
-    width: 110px;
-    text-align: center;
-    font-size: 1.5em;
-
 }
 
-div#menu ul li ul{
-    position: absolute;
-    top: 53px;
-    left: 0px;
-    display: none;
-    
-}
-div#menu ul li:hover{
-    background-color: #333333;
-    color: #FFFFFF;
-    -moz-box-shadow:0 3px 10px 0 #CCC; 
-    -webkit-box-shadow:0 3px 10px 0 #ccc; 
-    text-shadow:0px 0px 5px #fff; 
-}
-
-div#menu li ul li{
-    border:1px solid #c0c0c0; 
-    display:block; 
-    width:95px;    
-    font-size: 0.7em;
-}
-div#menu ul li:hover ul{
-    display: block;
-}
-
-.evento td{
+table td,th {
+    padding: 5px;
     border: 1px solid #000;
+    text-align: center;
+}
+
+#main_esquerdo {
+        width: 150px;
+	margin: 0px;
+        height:auto !important;
+        min-height:500px;
+	background: #858585;
+	border-radius: 0px 20px 20px 0px;
+}
+
+#main_direito {
+        width: 150px;
+	margin: 0px;
+	height:auto !important;
+        min-height:500px;
+	background: #858585;
+	border-radius: 20px 0px 0px 20px;
+}
+
+#rodape {	
+	width: 960px;
+	height: 100px;
+	background: #858585;
+	margin: 0px;
+	margin-top: 10px;
+	margin-bottom: 5px;
+
+}
+
+.msg {
+    float: left;
     padding: 5px;
 }
-
